added CSS part 1 tasks

--- a/Homeworks/07_HTML/Task02/Task02.htm
+++ b/Homeworks/07_HTML/Task02/Task02.htm
@@ -3,7 +3,7 @@
 <head>
     <title>Task02</title>
 <STYLE type="text/css">
-body { font-family: Arial }
+body { font-family: Arial; }
 OL.roman { list-style-type: upper-roman }
 OL.alpha { list-style-type: lower-alpha }
 UL.round { list-style-type: circle; }
