--- a/Homeworks/07_HTML/Task05/Task05.htm
+++ b/Homeworks/07_HTML/Task05/Task05.htm
@@ -7,7 +7,7 @@
 <body>
 <div id="left_panel">
 
-<img src="images/java_book.jpg" alt="Svetlin Nakov Java Book" height="317" width="225" style="margin:0" />
+<img class="book" src="images/java_book.jpg" alt="Svetlin Nakov Java Book" height="317" width="225" style="margin:0" />
 <p style="margin-top:0">Автор: <b>Светлин Наков</b></p>
 <p>Издателство: <b>Faber, 2004</b></p>
 <p>ISBN: <b>954-775-305-3</b></p>
@@ -15,7 +15,7 @@
 <p>Лиценз: <b>свободен</b></p>
 Официален спонсор:
 <br />
-<img src="images/bars_logo.jpg" alt="Bars logo" />
+<img class="book" src="images/bars_logo.jpg" alt="Bars logo" />
 
 </div>
 
@@ -23,8 +23,9 @@
 <div id="main_panel">
 
 <h1>Интернет програмиране с Java</h1>
-<ul>
-<li class="root_li">За автора:
+
+<ul class="root ul">
+<li>За автора:
 <ul>
 <li> Личен сайт: <a href="http://.www.nakov.com">www.nakov.com</a>
  <li>E-mail: <a href="mailto:inetjava-book@nakov.comitjava-book@nakov.com">inetjava-book@nakov.comitjava-book@nakov.com</a>
@@ -37,14 +38,14 @@
   </ul>
 <li class="root_li">Прочетете книгата on-line:
 <ul>
-<li><img src="images/ie_icon.png" width=25 height=25 style=margin:-3px;0;0;0;padding:0px; /><a href="#">HTML файл (2,37MB)</a>
+<li><img src="images/ie_icon.png" width=25 height=25 class="thumb" /><a href="#">HTML файл (2,37MB)</a>
 </ul>
 <li class="root_li">Изтеглете електронния вариант на книгата:
-<ul><li><img src="images/ie_icon.png" width=25 height=25 style=margin:-3px;0;0;0;padding:0px; /><a href="#">HTML файл (2,37MB)</a> &nbsp; <img src="images/pdf_icon.png" width=25 height=25 style=margin:-3px;0;0;0;padding:0px; /><a href="#">PDF файл (2,37MB)</a></ul>
+<ul><li><img src="images/ie_icon.png" width=25 height=25 sclass="thumb" /><a href="#">HTML файл (2,37MB)</a> &nbsp; <img src="images/pdf_icon.png" width=25 height=25 class="thumb" /><a href="#">PDF файл (2,37MB)</a></ul>
 <li>Сорс кодът от примерите:
 <ul>
-<li><img src="images/ie_icon.png" width=25 height=25 style=margin:-3px;0;0;0;padding:0px; /><a href="#">Разгледайте сорс кода на примерите от книгата</a>
-<li><img src="images/zip_icon.png" width=25 height=25 style=margin:-3px;0;0;0;padding:0px; /><a href="#">Издърпайте пълния сорс код на примерите от книгата - ZIP файл (82KB).</a>
+<li><img src="images/ie_icon.png" width=25 height=25 class="thumb" /><a href="#">Разгледайте сорс кода на примерите от книгата</a>
+<li><img src="images/zip_icon.png" width=25 height=25 class="thumb" /><a href="#">Издърпайте пълния сорс код на примерите от книгата - ZIP файл (82KB).</a>
 </ul>
 <li class="root_li">Отзиви:
 <ul>
@@ -54,6 +55,6 @@
 <ul><li>Чувствайте се свободни да задавате вашите въпроси, свързани с книгата, във <a href="#">форума</а>.</li>
 </ul>
 
-</div>
+
 </body>
 </html>
