--- a/Homeworks/08_CSS/Task02/Task02.htm
+++ b/Homeworks/08_CSS/Task02/Task02.htm
@@ -11,14 +11,14 @@
       </script>
 </head>
 <body>
-<table cellpadding="0" cellspacing="0" >
+<table>
 <thead>
-    <th>Contact Name</th><th>City</th><th>Country</th><th>Is Promoted</th>
+    <tr><th>Contact Name</th><th>City</th><th>Country</th><th>Is Promoted</th></tr>
 </thead>
 <tbody>
     <tr><td>Maria Anders</td><td>Berlin</td><td><img src="images/flag_germany.gif" alt="flag Germany" title="flag Germany">Germany</td><td><input DISABLED type="checkbox"></td></tr>
     <tr class="odd"><td>Ana Trujillo</td><td>Mexico D.F.</td><td><img src="images/flag_mexico.gif" alt="flag Mexico" title="flag Mexico">Mexico</td><td><input DISABLED type="checkbox"></td></tr>
-    <tr><td>Antonio Moreno</td><td>Mexico D.F</td><td><img src="images/flag_mexico.gif" alt="flag Mexico" title="flag Mexico">Mexico</td><td><input DISABLED type="checkbox" checked="true"></td></tr>
+    <tr><td>Antonio Moreno</td><td>Mexico D.F</td><td><img src="images/flag_mexico.gif" alt="flag Mexico" title="flag Mexico">Mexico</td><td><input DISABLED type="checkbox" checked=""></td></tr>
     <tr class="odd"><td>Thomas Hardy</td><td>London</td><td><img src="images/flag_UK.gif" alt="flag UK" title="flag UK">UK</td><td><input DISABLED type="checkbox"></td></tr>
 </tbody>
 </table>
