--- a/Homeworks/07_HTML/Task01/Task01.htm
+++ b/Homeworks/07_HTML/Task01/Task01.htm
@@ -12,7 +12,7 @@
 <div>- the best resources for runners</div>
 <hr />
 <footer>
-&copy 2007 Runners Home. All rights reserved.
+&copy; 2007 Runners Home. All rights reserved.
 </footer>
 </body>
 </html>
