--- a/Homeworks/07_HTML/Task05/Task05.htm
+++ b/Homeworks/07_HTML/Task05/Task05.htm
@@ -27,7 +27,7 @@
 <ul class="root ul">
 <li>За автора:
 <ul>
-<li> Личен сайт: <a href="http://.www.nakov.com">www.nakov.com</a>
+<li> Личен сайт: <a href="http://www.nakov.com">www.nakov.com</a>
  <li>E-mail: <a href="mailto:inetjava-book@nakov.comitjava-book@nakov.com">inetjava-book@nakov.comitjava-book@nakov.com</a>
  <li>ICQ: 3225187
  </ul>
@@ -38,23 +38,24 @@
   </ul>
 <li class="root_li">Прочетете книгата on-line:
 <ul>
-<li><img src="images/ie_icon.png" width=25 height=25 class="thumb" /><a href="#">HTML файл (2,37MB)</a>
+<li><img src="images/ie_icon.png" alt="icon" width=25 height=25 class="thumb" /><a href="#">HTML файл (2,37MB)</a>
 </ul>
 <li class="root_li">Изтеглете електронния вариант на книгата:
-<ul><li><img src="images/ie_icon.png" width=25 height=25 sclass="thumb" /><a href="#">HTML файл (2,37MB)</a> &nbsp; <img src="images/pdf_icon.png" width=25 height=25 class="thumb" /><a href="#">PDF файл (2,37MB)</a></ul>
+<ul><li><img src="images/ie_icon.png" alt="icon"  width=25 height=25 class="thumb" /><a href="#">HTML файл (2,37MB)</a> &nbsp; <img src="images/pdf_icon.png" alt="icon" width=25 height=25 class="thumb" /><a href="#">PDF файл (2,37MB)</a></ul>
 <li>Сорс кодът от примерите:
 <ul>
-<li><img src="images/ie_icon.png" width=25 height=25 class="thumb" /><a href="#">Разгледайте сорс кода на примерите от книгата</a>
-<li><img src="images/zip_icon.png" width=25 height=25 class="thumb" /><a href="#">Издърпайте пълния сорс код на примерите от книгата - ZIP файл (82KB).</a>
+<li><img src="images/ie_icon.png" alt="icon"  width=25 height=25 class="thumb" /><a href="#">Разгледайте сорс кода на примерите от книгата</a>
+<li><img src="images/zip_icon.png" alt="icon"  width=25 height=25 class="thumb" /><a href="#">Издърпайте пълния сорс код на примерите от книгата - ZIP файл (82KB).</a>
 </ul>
 <li class="root_li">Отзиви:
 <ul>
 <li>Прочетете <a href="#">отзивите</a> от научните редактори
 </ul>
 <li class="root_li">Дискусионен форум
-<ul><li>Чувствайте се свободни да задавате вашите въпроси, свързани с книгата, във <a href="#">форума</а>.</li>
+<ul><li>Чувствайте се свободни да задавате вашите въпроси, свързани с книгата, във <a href="#">форума</a>.
 </ul>
-
+</ul>
+</div>
 
 </body>
 </html>
