--- a/Homeworks/07_HTML/Task04/Profile.htm
+++ b/Homeworks/07_HTML/Task04/Profile.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Task04</title>
-    <link href="css/style.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div id=content>
