--- a/Homeworks/07_HTML/Task01/Task01.htm
+++ b/Homeworks/07_HTML/Task01/Task01.htm
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Task01</title>
+  <meta charset="utf-8" />
+  <title>Task01</title>
 </head>
 <body>
 <div>Hello, Stranger!</div>
