--- a/Project/Prototype/register.html
+++ b/Project/Prototype/register.html
@@ -24,7 +24,7 @@
         <dt><label for="fname">Enter your first name:</label> <dd><input class="form-text" maxlength="50" id="fname" size="50" type="text" value="" />
         <dt><label for="lname">Enter your last name: </label> <dd><input class="form-text" maxlength="50" id="lname" size="60" type="text" value="" />
         <dt><label for="user">Enter your username: </label><span class="required">*</span> <dd><input class="form-text" maxlength="50" id="user" size="60" type="text" value="" required />
-        <dt><label for="email">E-mail address: </label><span class="required">*</span> <dd><input class="form-text" maxlength="50" id="email" size="60" type="email" value="qweqwe" required />
+        <dt><label for="email">E-mail address: </label><span class="required">*</span> <dd><input class="form-text" maxlength="50" id="email" size="60" type="email" value="" required />
         <dt><label for="email2">Repeat E-mail: </label><span class="required">*</span> <dd><input class="form-text" maxlength="50" id="email2" size="60" type="email" value="" required />
         <dt><label for="pass">Enter your Password: </label><span class="required">*</span> <dd><input class="form-text" maxlength="50" id="pass" size="60" type="password" required />
         <dt><label for="pass2">Repeat Password: </label><span class="required">*</span> <dd><input class="form-text" maxlength="50" id="pass2" size="60" type="password" required />
