--- a/Project/Prototype/contacts.html
+++ b/Project/Prototype/contacts.html
@@ -40,24 +40,25 @@
 
 <table>
 <thead>
-    <tr><th>Category</th><th>Date</th><th>Description</th><th>Location</th><th>View Participants</th></tr>
+    <tr><th>First Name</th><th>Last Name</th><th>Email</th><th>Phone</th><th>Address</th><th>Note</th></tr>
 </thead>
 <tbody>
-    <tr><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
-    <tr class="odd"><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
-    <tr><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
-    <tr class="odd"><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
-    <tr><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
-      <tr class="odd"><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
-    <tr><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
-      <tr class="odd"><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
-    <tr><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
-  <tr class="odd"><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
-<tr><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
-  <tr class="odd"><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
-<tr><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
-  <tr class="odd"><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
-<tr><td>Personal</td><td>12/16/2010 16:45</td><td>Big Hall</td><td>Big Hall</td><td><a href="view_attendancies">view participants</a></td></tr>
+<tr><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+<tr class="odd"><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+    <tr><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+<tr class="odd"><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+    <tr><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+<tr class="odd"><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+    <tr><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+<tr class="odd"><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+    <tr><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+<tr class="odd"><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+    <tr><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+<tr class="odd"><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+    <tr><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+<tr class="odd"><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+    <tr><td>Ivan</td><td>Petrov</td><td>vankata@mail.bg</td><td>+359888334141</td><td>Sofia Lomsko, shose 45</td><td></td></tr>
+
 </tbody>
 </table>
 
