--- a/Homeworks/08_CSS/09. SimpleForm/SimpleForm.htm
+++ b/Homeworks/08_CSS/09. SimpleForm/SimpleForm.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+<meta charset="UTF-8" />
 <title>Task09</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
