--- a/Homeworks/08_CSS/10. CSS3 Cube/CSS3Cube.htm
+++ b/Homeworks/08_CSS/10. CSS3 Cube/CSS3Cube.htm
@@ -1,166 +1,37 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
-    <title>Task10</title>
-<link rel="stylesheet" href="css/demo.css" type="text/css" />
-
-
-<style type="text/css" media="screen">
-body {
-    background: #090;
-    text-align: center;
-    font-family: sans-serif;
-}
-
-a {
-    color: #6f6;
-}
-
-a:hover {
-    text-decoration: none;
-}
-
-#backdrop {
-    width: 600px;
-    color: #0f0;
-    font-family: monospace;
-    font-size: 24px;
-    margin: 0 auto;
-    -webkit-transform: rotate(-45deg) skew(15deg, 15deg);
-    -moz-transform: rotate(-45deg) skew(15deg, 15deg);
-    -o-transform: rotate(-45deg) skew(15deg, 15deg);
-    -ms-transform: rotate(-45deg) skew(15deg, 15deg);
-    transform: rotate(-45deg) skew(15deg, 15deg);
-}
-
-.cube {
-    position: absolute;
-    top: 90px;
-    left: 360px;
-}
-
-.face {
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    overflow: hidden;
-    font-family: monospace;
-    font-size: 24px;
-}
-
-.top {
-    top: 0;
-    left: 89px;
-    background: #fff;
-    color: #999;
-    -webkit-transform: rotate(-45deg) skew(15deg, 15deg);
-    -moz-transform: rotate(-45deg) skew(15deg, 15deg);
-    -o-transform: rotate(-45deg) skew(15deg, 15deg);
-    -ms-transform: rotate(-45deg) skew(15deg, 15deg);
-    transform: rotate(-45deg) skew(15deg, 15deg);
-}
-
-.left {
-    top: 155px;
-    left: 0;
-    background: #999;
-    color: #333;
-    -webkit-transform: rotate(15deg) skew(15deg, 15deg);
-    -moz-transform: rotate(15deg) skew(15deg, 15deg);
-    -o-transform: rotate(15deg) skew(15deg, 15deg);
-    -ms-transform: rotate(15deg) skew(15deg, 15deg);
-    transform: rotate(15deg) skew(15deg, 15deg);
-}
-
-.right {
-    top: 155px;
-    left: 178px;
-    background: #ccc;
-    color: #666;
-    -webkit-transform: rotate(-15deg) skew(-15deg, -15deg);
-    -moz-transform: rotate(-15deg) skew(-15deg, -15deg);
-    -o-transform: rotate(-15deg) skew(-15deg, -15deg);
-    -ms-transform: rotate(-15deg) skew(-15deg, -15deg);
-    transform: rotate(-15deg) skew(-15deg, -15deg);
-}
-
-.shadow {
-    top: 310px;
-    left: -89px;
-    background: black;
-    opacity: 0.5;
-    -webkit-transform: rotate(-45deg) skew(15deg, 15deg);
-    -moz-transform: rotate(-45deg) skew(15deg, 15deg);
-    -o-transform: rotate(-45deg) skew(15deg, 15deg);
-    -ms-transform: rotate(-45deg) skew(15deg, 15deg);
-    transform: rotate(-45deg) skew(15deg, 15deg);
-}
-
-video {
-    width: 100%;
-    height: 100%;
-}
-
-#two {
-    -webkit-transform: scale(0.5) translate(700px, 600px);
-    -moz-transform: scale(0.5) translate(700px, 600px);
-    -o-transform: scale(0.5) translate(700px, 600px);
-    -ms-transform: scale(0.5) translate(700px, 600px);
-    transform: scale(0.5) translate(700px, 600px);
-}
-
-.cube {
-
-
-}
-</style>
+<meta charset="UTF-8" />
+<title>Task 10 Rotating Cube CSS3</title>
+<script src="js/jquery-1.6.2.min.js"></script>
+<link href="css/style.css" rel="stylesheet" type="text/css" />
 
 </head>
-<body>
 
+<body onload="rotation_init(2);">
+<script src="js/rotate.js"></script>
 
-    
-<div id="backdrop">
-    
-<a href="http://www.zachstronaut.com/">Zachstronaut</a>... isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube isocube
+<div id="cubeLayout">
+	<div id="Zcube">
+		<div id="Ycube">
+			<div id="cube">
+				<div class="face one">
+				</div>
+				<div class="face two">
+				</div>
+				<div class="face three">
+				</div>
+				<div class="face four">
+				</div>
+				<div class="face five">
+				</div>
+				<div class="face six">
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
-
-<div class="cube">
-    <div class="face top">
-    isocubeisocube
-    isocubeisocube
-    isocubeisocube
-    iso<input type="button" name="button" value="HTML Button" />cube
-    isocubeisocube
-    isocubeisocube
-    isocubeisocube
-    isocubeisocube
-    </div>
-    <div class="face left">
-
-    isocubeisocube
-    isocubeisocube
-    isocubeisocube
-    iso<input type="button" name="button" value="HTML Button" />cube
-    isocubeisocube
-    isocubeisocube
-    isocubeisocube
-    isocubeisocube
-
-    </div>
-    <div class="face right">
-    isocubeisocube
-    isocubeisocube
-    isocubeisocube
-    iso<input type="button" name="button" value="HTML Button" />cube
-    isocubeisocube
-    isocubeisocube
-    isocubeisocube
-    isocubeisocube
-    </div>
-    <div class="face shadow"></div>
-</div>
-
 
 </body>
 
