--- a/Project/Prototype/meetings.html
+++ b/Project/Prototype/meetings.html
@@ -45,14 +45,14 @@
 				<dt><label for="category-name">Category Name: </label>
 				<span class="required">*</span> </dt>
 				<dd>
-				<input id="category-name" class="form-text" maxlength="50" required="" size="60" type="text" value="default" />
+				<input id="category-name" class="form-text" maxlength="50" required size="60" type="text" value="default" />
 				</dd>
 				<dt><label for="category-description">Category Description:</label></dt>
 				<dd>
 				<input id="category-description" class="form-text" maxlength="50" size="50" type="text" value="" />
 				</dd>
 			</dl>
-			<input class="link-button" type="submit" value="Add Contact" />
+			<input class="link-button" type="submit" value="Add Category" />
 		</form>
 	</div>
 	<h1>My Meetings</h1>
@@ -60,147 +60,110 @@
 		<thead>
 			<tr>
 				<th>Date</th>
+				<th>Category</th>
 				<th>Description</th>
 				<th>Location</th>
 				<th>View Attendants</th>
 				<th>Actions</th>
 			</tr>
 		</thead>
-		
-        <tr class="odd">
+		<tr class="odd">
 			<td>2012-01-20 08:30:00</td>
+			<td>Personal</td>
 			<td>This is a good description for this Meeting</td>
 			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="meeting_contacts.html">View All Participants</a><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
+			<td class="attendands"><a href="meeting_contacts.html">View All Participants</a><a href="#">Emil 
+			Petkov</a><a href="#">Ivanka Mutafova</a></td>
+			<td><a href="meeting_contacts.html">
+			<img alt="vview contacts for this meeting" src="images/view.png" title="view contacts for this meeting" /></a>
+			<a href="#">
+			<img alt="edit this contact" src="images/edit.png" /></a>
+			<a class="delete" href="#">
+			<img alt="delete this row" src="images/delete.png" /></a></td>
 		</tr>
-        		<tr>
+		<tr>
 			<td>2012-01-20 08:30:00</td>
+			<td>Business</td>
 			<td>This is a good description for this Meeting</td>
 			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
+			<td class="attendands"><a href="#">Pesho Sekirata</a><a href="#">Nadia 
+			Koleva</a></td>
+			<td><a href="meeting_contacts.html">
+			<img alt="view contacts for this meeting" src="images/view.png" title="view contacts for this meeting" /></a>
+			<a href="#">
+			<img alt="edit this contact" src="images/edit.png" /></a>
+			<a class="delete" href="#">
+			<img alt="delete this row" src="images/delete.png" /></a></td>
 		</tr>
-        <tr class="odd">
+		<tr class="odd">
 			<td>2012-01-20 08:30:00</td>
+			<td>Personal</td>
 			<td>This is a good description for this Meeting</td>
 			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="meeting_contacts.html">View All Participants</a><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
+			<td class="attendands"><a href="meeting_contacts.html">View All Participants</a><a href="#">Emil 
+			Petkov</a><a href="#">Ivanka Mutafova</a></td>
+			<td><a href="meeting_contacts.html">
+			<img alt="vview contacts for this meeting" src="images/view.png" title="view contacts for this meeting" /></a>
+			<a href="#">
+			<img alt="edit this contact" src="images/edit.png" /></a>
+			<a class="delete" href="#">
+			<img alt="delete this row" src="images/delete.png" /></a></td>
 		</tr>
-        		<tr>
+		<tr>
 			<td>2012-01-20 08:30:00</td>
+			<td>Business</td>
 			<td>This is a good description for this Meeting</td>
 			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
+			<td class="attendands"><a href="#">Pesho Sekirata</a><a href="#">Nadia 
+			Koleva</a></td>
+			<td><a href="meeting_contacts.html">
+			<img alt="view contacts for this meeting" src="images/view.png" title="view contacts for this meeting" /></a>
+			<a href="#">
+			<img alt="edit this contact" src="images/edit.png" /></a>
+			<a class="delete" href="#">
+			<img alt="delete this row" src="images/delete.png" /></a></td>
 		</tr>
-        <tr class="odd">
+		<tr class="odd">
 			<td>2012-01-20 08:30:00</td>
+			<td>Personal</td>
 			<td>This is a good description for this Meeting</td>
 			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="meeting_contacts.html">View All Participants</a><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
+			<td class="attendands"><a href="meeting_contacts.html">View All Participants</a><a href="#">Emil 
+			Petkov</a><a href="#">Ivanka Mutafova</a></td>
+			<td><a href="meeting_contacts.html">
+			<img alt="vview contacts for this meeting" src="images/view.png" title="view contacts for this meeting" /></a>
+			<a href="#">
+			<img alt="edit this contact" src="images/edit.png" /></a>
+			<a class="delete" href="#">
+			<img alt="delete this row" src="images/delete.png" /></a></td>
 		</tr>
-        		<tr>
+		<tr>
 			<td>2012-01-20 08:30:00</td>
+			<td>Business</td>
 			<td>This is a good description for this Meeting</td>
 			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
+			<td class="attendands"><a href="#">Pesho Sekirata</a><a href="#">Nadia 
+			Koleva</a></td>
+			<td><a href="meeting_contacts.html">
+			<img alt="view contacts for this meeting" src="images/view.png" title="view contacts for this meeting" /></a>
+			<a href="#">
+			<img alt="edit this contact" src="images/edit.png" /></a>
+			<a class="delete" href="#">
+			<img alt="delete this row" src="images/delete.png" /></a></td>
 		</tr>
-        <tr class="odd">
+		<tr class="odd">
 			<td>2012-01-20 08:30:00</td>
+			<td>Personal</td>
 			<td>This is a good description for this Meeting</td>
 			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="meeting_contacts.html">View All Participants</a><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
-		</tr>
-        		<tr>
-			<td>2012-01-20 08:30:00</td>
-			<td>This is a good description for this Meeting</td>
-			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
-		</tr>
-        <tr class="odd">
-			<td>2012-01-20 08:30:00</td>
-			<td>This is a good description for this Meeting</td>
-			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="meeting_contacts.html">View All Participants</a><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
-		</tr>
-        		<tr>
-			<td>2012-01-20 08:30:00</td>
-			<td>This is a good description for this Meeting</td>
-			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
-		</tr>
-        <tr class="odd">
-			<td>2012-01-20 08:30:00</td>
-			<td>This is a good description for this Meeting</td>
-			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="meeting_contacts.html">View All Participants</a><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
-		</tr>
-        		<tr>
-			<td>2012-01-20 08:30:00</td>
-			<td>This is a good description for this Meeting</td>
-			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
-		</tr>
-        <tr class="odd">
-			<td>2012-01-20 08:30:00</td>
-			<td>This is a good description for this Meeting</td>
-			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="meeting_contacts.html">View All Participants</a><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
-		</tr>
-        		<tr>
-			<td>2012-01-20 08:30:00</td>
-			<td>This is a good description for this Meeting</td>
-			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
-		</tr>
-        <tr class="odd">
-			<td>2012-01-20 08:30:00</td>
-			<td>This is a good description for this Meeting</td>
-			<td>Sofia Lomsko, shose 45</td>
-			<td class="attendands"><a href="meeting_contacts.html">View All Participants</a><a href="#">Emil Petkov</a><a href="#">Ivanka Mutafova</a></td>
-     		<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
+			<td class="attendands"><a href="meeting_contacts.html">View All Participants</a><a href="#">Emil 
+			Petkov</a><a href="#">Ivanka Mutafova</a></td>
+			<td><a href="meeting_contacts.html">
+			<img alt="vview contacts for this meeting" src="images/view.png" title="view contacts for this meeting" /></a>
+			<a href="#">
+			<img alt="edit this contact" src="images/edit.png" /></a>
+			<a class="delete" href="#">
+			<img alt="delete this row" src="images/delete.png" /></a></td>
 		</tr>
 		<tfoot>
 			<tr>
@@ -210,18 +173,18 @@
 				<a href="#">
 				<img class="pagination" src="images/next.png" title="Next" /></a><a href="#"><img class="pagination" src="images/last.png" title="Last" /></a>
 				</td>
-				<td>Meetings per page:<select>
-				<option value="5">5</option>
-				<option value="15" selected>15</option>
+				<td colspan="2" class="paging">Meetings per page:<select>
+				<option selected="" value="7">7</option>
+				<option value="15">15</option>
 				<option value="30">30</option>
-				</select><a href="#"><img src="images/refresh32px.png" title="Refresh" /></a>
+				</select><a href="#"><img class="refresh" alt="Refresh" src="images/refresh32px.png" title="Refresh" /></a>
 				</td>
 			</tr>
 		</tfoot>
 	</table>
 
 
-<footer>Copyright 2012© <a href="http://georgi-mitev.com">Georgi Mitev</a></footer>
+<footer><div id="copyright">Copyright 2012© <a href="http://georgi-mitev.com">Georgi Mitev</a></div></footer>
 </div>
 
 </body>
