--- a/Project/Prototype/edit_meeting.html
+++ b/Project/Prototype/edit_meeting.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8" />
-<title>Web Calendar :: Add New Meeting</title>
+<title>Web Calendar :: Edit Meeting</title>
 <link href="css/jquery-ui.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
 <script src="js/jquery-1.7.1.min.js"></script>
@@ -44,7 +44,7 @@
 				<dt><label for="meeting-category">Meeting Category: </label>
 				</dt>
 				<dd>
-				<input id="meeting-category" class="form-text" maxlength="50" required size="60" type="text" value="default" />
+				<input id="meeting-category" class="form-text" maxlength="50" required="" size="60" type="text" value="default" />
 				</dd>
 				<dt><label for="meeting-desc">Meeting Description:</label><span class="required">*</span>
 				</dt>
@@ -58,12 +58,12 @@
 				</dd>
 				<dt><label for="meeting-location">Meeting Location</label></dt>
 				<dd>
-				<input id="meeting-location" class="form-text" maxlength="50" required size="60" type="text" value="" />
+				<input id="meeting-location" class="form-text" maxlength="50" required="" size="60" type="text" value="" />
 				</dd>
 				<dt><label for="meeting-attendants">Meeting Attandants: </label>
 				<span class="required">*</span> </dt>
 				<dd>
-				<input id="meeting-attendants" class="form-text" maxlength="50" required size="60" type="email" value="" />
+				<input id="meeting-attendants" class="form-text" maxlength="50" required="" size="60" type="email" value="" />
 				</dd>
 			</dl>
 			<input class="link-button" type="submit" value="Add Meeting" />
