--- a/Project/Prototype/meeting_contacts.html
+++ b/Project/Prototype/meeting_contacts.html
@@ -37,9 +37,9 @@
 	<div class="spacer">
 &nbsp;</div>
 	<h2>Meeting Date: 2012-01-20 08:30:00</h2>
-    <h2>Meeting Description: This is a good description for this Meeting</h2>
-    <h2>Meeting Location: Sofia Lomsko, shose 45</h2>
-	<h1>Meeting Contacts: </h1>
+	<h2>Meeting Description: This is a good description for this Meeting</h2>
+	<h2>Meeting Location: Sofia Lomsko, shose 45</h2>
+	<h1>Meeting&#39;s Participants: </h1>
 	<table>
 		<thead>
 			<tr>
@@ -48,18 +48,37 @@
 				<th>Email</th>
 				<th>Phone</th>
 				<th>Address</th>
+				<th>Note</th>
 				<th>Actions</th>
 			</tr>
 		</thead>
-		<tr>
+		<tr class="odd">
 			<td>Ivan</td>
 			<td>Petrov</td>
 			<td>vankata@mail.bg</td>
 			<td>+359888334141</td>
 			<td>Sofia Lomsko, shose 45</td>
-			<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
+			<td>This is some note for this contact</td>
+			<td><a href="meetings_for_contact.html">
+			<img alt="view meetings for this contact" src="images/view.png" /></a>
+			<a href="#">
+			<img alt="edit this contact" src="images/edit.png" /></a>
+			<a class="delete" href="#">
+			<img alt="delete this row" src="images/delete.png" /></a></td>
+		</tr>
+		<tr>
+			<td>Albena</td>
+			<td>Vuleva</td>
+			<td>misho@mail.bg</td>
+			<td>+359888334141</td>
+			<td>Sofia Lomsko, shose 45</td>
+			<td>This is some note for this contact</td>
+			<td><a href="meetings_for_contact.html">
+			<img alt="view meetings for this contact" src="images/view.png" /></a>
+			<a href="#">
+			<img alt="edit this contact" src="images/edit.png" /></a>
+			<a class="delete" href="#">
+			<img alt="delete this row" src="images/delete.png" /></a></td>
 		</tr>
 		<tr class="odd">
 			<td>Ivan</td>
@@ -67,19 +86,27 @@
 			<td>vankata@mail.bg</td>
 			<td>+359888334141</td>
 			<td>Sofia Lomsko, shose 45</td>
-			<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
+			<td>This is some note for this contact</td>
+			<td><a href="meetings_for_contact.html">
+			<img alt="view meetings for this contact" src="images/view.png" /></a>
+			<a href="#">
+			<img alt="edit this contact" src="images/edit.png" /></a>
+			<a class="delete" href="#">
+			<img alt="delete this row" src="images/delete.png" /></a></td>
 		</tr>
 		<tr>
-			<td>Ivan</td>
-			<td>Petrov</td>
-			<td>vankata@mail.bg</td>
+			<td>Albena</td>
+			<td>Vuleva</td>
+			<td>misho@mail.bg</td>
 			<td>+359888334141</td>
 			<td>Sofia Lomsko, shose 45</td>
-			<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
+			<td>This is some note for this contact</td>
+			<td><a href="meetings_for_contact.html">
+			<img alt="view meetings for this contact" src="images/view.png" /></a>
+			<a href="#">
+			<img alt="edit this contact" src="images/edit.png" /></a>
+			<a class="delete" href="#">
+			<img alt="delete this row" src="images/delete.png" /></a></td>
 		</tr>
 		<tr class="odd">
 			<td>Ivan</td>
@@ -87,72 +114,17 @@
 			<td>vankata@mail.bg</td>
 			<td>+359888334141</td>
 			<td>Sofia Lomsko, shose 45</td>
-			<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
+			<td>This is some note for this contact</td>
+			<td><a href="meetings_for_contact.html">
+			<img alt="view meetings for this contact" src="images/view.png" /></a>
+			<a href="#">
+			<img alt="edit this contact" src="images/edit.png" /></a>
+			<a class="delete" href="#">
+			<img alt="delete this row" src="images/delete.png" /></a></td>
 		</tr>
-		<tr>
-			<td>Ivan</td>
-			<td>Petrov</td>
-			<td>vankata@mail.bg</td>
-			<td>+359888334141</td>
-			<td>Sofia Lomsko, shose 45</td>
-			<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
-		</tr>
-		<tr class="odd">
-			<td>Ivan</td>
-			<td>Petrov</td>
-			<td>vankata@mail.bg</td>
-			<td>+359888334141</td>
-			<td>Sofia Lomsko, shose 45</td>
-			<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
-		</tr>
-		<tr>
-			<td>Ivan</td>
-			<td>Petrov</td>
-			<td>vankata@mail.bg</td>
-			<td>+359888334141</td>
-			<td>Sofia Lomsko, shose 45</td>
-			<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
-		</tr>
-		<tr class="odd">
-			<td>Ivan</td>
-			<td>Petrov</td>
-			<td>vankata@mail.bg</td>
-			<td>+359888334141</td>
-			<td>Sofia Lomsko, shose 45</td>
-			<td><a href="#"><img src="images/view32px.png" title="View" /></a>
-			<a href="#"><img src="images/edit32px.png" title="Edit" /></a>
-			<a href="#"><img src="images/delete.png" title="delete" /></a></td>
-		</tr>
-
-
-
-		<tfoot>
-			<tr>
-				<td colspan="5"><a href="#">
-				<img class="pagination" src="images/first.png" title="Last" /></a><a href="#"><img class="pagination" src="images/prev.png" title="Previous" /></a><div class="page-number">
-					Page <input type="text" value="1" /> of 7</div>
-				<a href="#">
-				<img class="pagination" src="images/next.png" title="Next" /></a><a href="#"><img class="pagination" src="images/last.png" title="Last" /></a>
-				</td>
-				<td>Contacts per page:<select>
-				<option value="15">15</option>
-				<option value="30">30</option>
-				<option value="60">60</option>
-				</select><a href="#"><img src="images/refresh32px.png" title="Refresh" /></a>
-				</td>
-			</tr>
-		</tfoot>
 	</table>
 
-<footer>Copyright 2012© <a href="http://georgi-mitev.com">Georgi Mitev</a></footer>
+<footer><div id="copyright">Copyright 2012© <a href="http://georgi-mitev.com">Georgi Mitev</a></div></footer>
 </div>
 
 </body>
