--- a/Homeworks/11. ProjectPart I/Front-end/images/index.html
+++ b/Homeworks/11. ProjectPart I/Front-end/images/index.html
@@ -4,19 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <title>Web Calendar :: Login</title>
-    <link href="css/jquery-ui.css" rel="stylesheet"/>
     <link href="css/style.css" rel="stylesheet"/>
-	<script src="js/jquery-1.7.1.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/web-calendar.js"></script>
 </head>
 
 <body>
-<header class="header-guest">
-<span>Wellcome to your private Web Calendar!</span>
-</header>
+
 <div id="login-form">
-<h2>Hello Stranger! Please login or register!</h2>
+<h1>Hello Stranger! Please login or register!</h1>
 	<div class="description">To login into your Web Calendar, type your credentials below.</div>
 	<form accept-charset="UTF-8" action="home.html" method="post">
 		<p>Username </p>
@@ -24,12 +18,11 @@
 		<p>Password </p>
 		<input class="form-text" maxlength="128" name="pass" size="60" type="password" />
 	<div class="description">Don&#39;t have an account? <a href="register.html">Register now</a>.</div>
-		<input class="link-button" type="submit" value="Log in" />
+		<input class="form-submit" type="submit" value="Log in" />
 	</form>
 </div>
 
-<footer class="footer-guest">
-</footer>
+
 
 </body>
 
