--- a/Homeworks/08. CSS/10. CSS3 Cube/CSS3Cube.htm
+++ b/Homeworks/08. CSS/10. CSS3 Cube/CSS3Cube.htm
@@ -6,10 +6,11 @@
 <title>Task 10 Rotating Cube CSS3</title>
 <script src="js/jquery-1.6.2.min.js"></script>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
+<!--Task 10 Use CSS 3 to make a 3D rotating Rubic cube-->
 
 </head>
 
-<body onload="rotation_init(2);">
+<body onload="rotate_cube(2);">
 <script src="js/rotate.js"></script>
 
 <div id="cubeLayout">
@@ -18,11 +19,11 @@
 			<div id="cube">
 				<div class="face one">
 				</div>
-				<div class="face two">
+				<div class="face two">This is 50% opacity
 				</div>
 				<div class="face three">
 				</div>
-				<div class="face four">
+				<div class="face four">This is 25% opacity
 				</div>
 				<div class="face five">
 				</div>
