--- a/Homeworks/08. CSS/10. CSS3 Cube/CSS3Cube.htm
+++ b/Homeworks/08. CSS/10. CSS3 Cube/CSS3Cube.htm
@@ -19,13 +19,13 @@
 			<div id="cube">
 				<div class="face one">
 				</div>
-				<div class="face two">This is 50% opacity
+				<div class="face two"><marquee>This is 25% opacity</marquee>
 				</div>
-				<div class="face three">
+				<div class="face three"><marquee>This is 50% opacity</marquee>
 				</div>
-				<div class="face four">This is 25% opacity
+				<div class="face four"><marquee>This is 75% opacity</marquee>
 				</div>
-				<div class="face five">
+				<div class="face five"><marquee>This is 100% opacity</marquee>
 				</div>
 				<div class="face six">
 				</div>
